<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.HomeFragment"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="40sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/yellow"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:text="@string/appDesc" />

    <TextView
        android:id="@+id/tvServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/services" />

    <TextView
        android:id="@+id/tvOurServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvServices"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/ourServices" />

    <View
        android:id="@+id/view"
        android:padding="4dp"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOurServices" />
    
    <LinearLayout
        android:id="@+id/llCards"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginTop="5dp">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="120dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card1"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card2"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card3"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>
        
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="@color/yellow"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/llCards"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:text="@string/aboutUs"
       />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>